--- a/Dockerfile.Stable
+++ b/Dockerfile.Stable
@@ -1,15 +1,14 @@
-FROM rust:slim-bookworm
+FROM debian:stable-slim
+ENV DEBIAN_FRONTEND noninteractive
 
 # Update container
 RUN apt-get update
 RUN apt-get upgrade -y
 RUN apt-get install -y build-essential curl make libssl-dev pkg-config zip libclang-dev wget tar graphviz
 
-# Rust Toolchain
-# RUN rustup toolchain install "stable"
-# RUN rustup toolchain install "beta"
-# RUN rustup toolchain install "nightly"
-# RUN rustup default "stable"
+# Install Rustup
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+ENV PATH="root/.cargo/bin:${PATH}"
 
 # Rust Tools
 RUN rustup component add clippy
@@ -37,9 +36,6 @@ RUN cargo binstall --no-confirm mdbook-toc
 RUN cargo binstall --no-confirm mdbook-katex
 
 # Clear caches / Minimize image size
-RUN cargo binstall --no-confirm du-dust
-RUN mv $CARGO_HOME/bin/* /bin
-RUN rm -rfv $CARGO_HOME
+RUN mv /root/.cargo/bin/* /bin
+RUN rm -rfv /root/.cargo/
 RUN apt-get clean
-
-# ENTRYPOINT [ "/bin/bash", "-l", "-c" ]
