--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,10 +35,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: rust-ci:${{ matrix.tag }}
+          tags: ghcr.io/rust-ci:${{ matrix.tag }}
