chore: attempt to fix registry tag.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -44,4 +44,4 @@ jobs:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: ghcr.io/rust-ci:${{ matrix.tag }}
+          tags: rust-ci:${{ matrix.tag }}
