--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -34,9 +34,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -44,3 +41,4 @@ jobs:
           file: ${{ matrix.dockerfile }}
           push: true
           tags: rust-ci:${{ matrix.tag }}
+          labels: ${{ steps.meta.outputs.labels }}
