--- a/.github/workflows/publish.stable.yaml
+++ b/.github/workflows/publish.stable.yaml
@@ -1,7 +1,8 @@
 name: Publish Docker image
 
 on:
-  push
+  push:
+    branches: ['stable']
 
 env:
   REGISTRY: ghcr.io
@@ -34,11 +35,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: test
+        run: ${{ steps.meta.outputs.tags }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: rust-ci:${{ matrix.tag }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
