chore: Reapply all docker steps.

--- a/Dockerfile.Nightly
+++ b/Dockerfile.Nightly
@@ -1,41 +1,41 @@
 FROM debian:stable-slim
-# ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND noninteractive
 
-# # Update container
-# RUN apt-get update
-# RUN apt-get upgrade -y
-# RUN apt-get install -y build-essential curl make libssl-dev pkg-config zip libclang-dev wget tar graphviz
+# Update container
+RUN apt-get update
+RUN apt-get upgrade -y
+RUN apt-get install -y build-essential curl make libssl-dev pkg-config zip libclang-dev wget tar graphviz
 
-# # Install Rustup
-# RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly
-# ENV PATH="/root/.cargo/bin:${PATH}"
+# Install Rustup
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain nightly
+ENV PATH="/root/.cargo/bin:${PATH}"
 
-# # Rust Tools
-# RUN rustup component add clippy
-# RUN rustup component add rustfmt
+# Rust Tools
+RUN rustup component add clippy
+RUN rustup component add rustfmt
 
-# # Cargo binstall
-# RUN curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
+# Cargo binstall
+RUN curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
 
-# # Cargo binaries
-# RUN cargo binstall --no-confirm cargo-spellcheck
-# RUN cargo binstall --no-confirm cargo-about
-# RUN cargo binstall --no-confirm cargo-outdated
-# RUN cargo binstall --no-confirm cargo-udeps
-# RUN cargo binstall --no-confirm cargo-pants
-# RUN cargo binstall --no-confirm cargo-audit
-# RUN cargo binstall --no-confirm cargo-tarpaulin
+# Cargo binaries
+RUN cargo binstall --no-confirm cargo-spellcheck
+RUN cargo binstall --no-confirm cargo-about
+RUN cargo binstall --no-confirm cargo-outdated
+RUN cargo binstall --no-confirm cargo-udeps
+RUN cargo binstall --no-confirm cargo-pants
+RUN cargo binstall --no-confirm cargo-audit
+RUN cargo binstall --no-confirm cargo-tarpaulin
 
-# # Rustbook
-# RUN cargo binstall --no-confirm mdbook
-# RUN cargo binstall --no-confirm mdbook-mermaid
-# RUN cargo binstall --no-confirm mdbook-graphviz
-# RUN cargo binstall --no-confirm mdbook-linkcheck
-# RUN cargo binstall --no-confirm mdbook-admonish
-# RUN cargo binstall --no-confirm mdbook-toc
-# RUN cargo binstall --no-confirm mdbook-katex
+# Rustbook
+RUN cargo binstall --no-confirm mdbook
+RUN cargo binstall --no-confirm mdbook-mermaid
+RUN cargo binstall --no-confirm mdbook-graphviz
+RUN cargo binstall --no-confirm mdbook-linkcheck
+RUN cargo binstall --no-confirm mdbook-admonish
+RUN cargo binstall --no-confirm mdbook-toc
+RUN cargo binstall --no-confirm mdbook-katex
 
-# # Clear caches / Minimize image size
-# RUN mv /root/.cargo/bin/* /bin
-# RUN rm -rfv /root/.cargo/
-# RUN apt-get clean
+# Clear caches / Minimize image size
+RUN mv /root/.cargo/bin/* /bin
+RUN rm -rfv /root/.cargo/
+RUN apt-get clean
