chore: add option for manual start of action.

--- a/.github/workflows/publish.nightly.yaml
+++ b/.github/workflows/publish.nightly.yaml
@@ -2,7 +2,8 @@ name: Publish Docker image
 
 on:
   push:
-    branches: ['nightly']
+    branches: ["nightly"]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
