--- a/.github/workflows/publish.stable.yaml
+++ b/.github/workflows/publish.stable.yaml
@@ -2,7 +2,8 @@ name: Publish Docker image
 
 on:
   push:
-    branches: ['stable']
+    branches: ["stable"]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
