--- a/.github/workflows/publish.stable.yaml
+++ b/.github/workflows/publish.stable.yaml
@@ -3,7 +3,8 @@ name: Publish Docker image
 on:
   push:
     branches: ['stable']
-
+  workflow_dispatch:
+  
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
